SERVER-114402 Make checkMetadataConsistency check the critical section when consulting the DSS (#44441)

GitOrigin-RevId: 9a4150e782fad7cc194501c411ae2cbbdecbb4df